# socratiq

./: .gitignore  baseline_evaluation.py  constants.py  dataset.py  main.py  pyproject.toml  train.py
examples/: train.py
