[project]
name = "socratiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "accelerate>=1.12.0",
    "datasets>=4.4.2",
    "gradio>=6.2.0",
    "huggingface-hub>=0.36.0",
    "transformers>=4.57.3",
]
