[project]
name = "socratiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "notebook>=7.5.1",
]

[dependency-groups]
dev = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.0",
    "datasets>=4.4.2",
    "gradio>=6.2.0",
    "huggingface-hub>=0.36.0",
    "peft>=0.18.0",
    "transformers>=4.57.3",
    "trl>=0.26.2",
    "wandb>=0.23.1",
]
